--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-ratatui = "0.26"
-crossterm = "0.27"
-walkdir = "2"
-serde = { version = "1", features = ["derive"] }
-toml = "0.8"
+color-eyre = "0.6.3"
+crossterm = "0.28.1"
+ratatui = "0.29.0"
+chrono = "0.4"
